# Wikimage

./: .gitignore  CMakeLists.txt  Makefile  README.md  configure.ac  image.h  wikimage.c
include/: config.h.in  download.h  image.h  string_manipulate.h
src/: Makefile.am  download.c  image.c  string_manipulate.c  wikimage.c
